syntax = "proto3";

option csharp_namespace = "ProductServiceClient";

service ProductServicee  {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
    rpc AddProduct (AddProductRequest) returns (ProductResponse);
    rpc UpdateStock (UpdateStockRequest) returns (StockResponse);
}

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
}

message AddProductRequest {
    string name = 1;
    double price = 2;
    int32 stock = 3;
}

message UpdateStockRequest {
    int32 id = 1;
    int32 new_stock = 2;
}

message StockResponse {
    bool success = 1;
}
